--- a/_posts/16-09-24-llm-lora-qlora-170924.md
+++ b/_posts/16-09-24-llm-lora-qlora-170924.md
@@ -1,7 +1,7 @@
 ---
 title: LoRA, QLoRA - Huấn luyện LLM chưa bao giờ nhanh và nhẹ đến thế ! 
 date: 2024-09-16
-categories: [LMM]
+categories: [LLM]
 tags: [lora]
 author:  Trung Viet 
 math: true
