--- a/_posts/18-03-25-rlhf.md
+++ b/_posts/18-03-25-rlhf.md
@@ -180,3 +180,8 @@ Thay vì chỉ sử dụng thuật toán PPO ở trên, điểm mới trong Llam
 Trong bài viết này, mình đã giới thiệu cho các bạn về RLHF, nó là gì và quy trình huấn luyện một mô hình ngôn ngữ lớn sử dụng RLHF ra sao và thực nghiệm của nó trong một mô hình cụ thể (Llama). Một điều mình cảm thấy khá thú vị đó là trước kia, các bài toán liên quan tới RL thường là một nhánh chuyên biệt, liên quan tới giải các trò chơi, .. tuy nhiên RLHF đã cho mình một sự kết hợp khá thú vị giữa RL và cách tiếp cận deep learning truyển thống cũng như NLP. 
 
 
+## Tham khảo 
+- https://huggingface.co/blog/rlhf
+- https://arxiv.org/pdf/2307.09288#page=9.78
+- https://viblo.asia/p/llm-101-tim-hieu-rlhf-trong-instructgpt-va-llama-2-zOQJwo9pJMP#_rlhf-trong-llama-2-3
+- https://huyenchip.com/2023/05/02/rlhf.html
